--- a/public/index.html
+++ b/public/index.html
@@ -55,16 +55,16 @@
         })
       })
       // horizontal bar
-      $(()=>{
-        $(window).scroll(()=>{
-          $('.bar').css({'display':'block'})
-          const scroll = $(window).scrollTop()
-                dh     = $(document).height()
-                wh     = $(window).height()
-                scrollP=(scroll/(dh-wh)) * 100
-                $('.bar').css('width', scrollP + '%')
-        })
-      })
+      // $(()=>{
+      //   $(window).scroll(()=>{
+      //     $('.bar').css({'display':'block'})
+      //     const scroll = $(window).scrollTop()
+      //           dh     = $(document).height()
+      //           wh     = $(window).height()
+      //           scrollP=(scroll/(dh-wh)) * 100
+      //           $('.bar').css('width', scrollP + '%')
+      //   })
+      // })
     </script>
   </body>
 </html>
