--- a/public/index.html
+++ b/public/index.html
@@ -27,8 +27,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link rel="shortcut icon" href="./images/logo.png" type="image/png">
-    <title>React SPA</title>
+    <link rel="shortcut icon" href="./images/cart.png" type="image/png">
+    <title>Casino</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -45,15 +45,22 @@
     -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script>
-      // nav bar
-      var zero=0
-      $(document).ready(function(){
-        $(window).on('scroll',()=>{
-          $('.navbar-bg').toggleClass('up',$(window).scrollTop() > zero)
-          $('.navbar-bg').toggleClass('down',$(window).scrollTop() < zero)
-          zero=$(window).scrollTop()
+
+      $(()=>{
+        $('.spin').click(()=>{
+          $('.wheel').toggleClass('open')
         })
       })
+
+      // nav bar
+      // var zero=0
+      // $(document).ready(function(){
+      //   $(window).on('scroll',()=>{
+      //     $('.navbar-bg').toggleClass('up',$(window).scrollTop() > zero)
+      //     $('.navbar-bg').toggleClass('down',$(window).scrollTop() < zero)
+      //     zero=$(window).scrollTop()
+      //   })
+      // })
       // horizontal bar
       // $(()=>{
       //   $(window).scroll(()=>{
